# 514-Control-Center-

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  module.yaml  rules.md
.ai-shared/: .stop-gate-state.json  README.md  context.md  decisions.md  roster.json
.ai-shared/handoff/: .codex-prompt-soul-security-retry.md  .codex-raw-retry2-20260716.txt  _meta-evolve-raw.json  claude-to-codex__finaudit-v34__20260615.md  (+73 more)
.claude-plugin/: plugin.json
.claude/hooks/: mirror-gate.py  (+2 more)
.codex/: CLAUDE_SYNC.md  config.toml  hooks.json
.cursor/: README.md  hooks.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
customize/: README.md
data/: elicitation-methods.csv
guardrails/: README.md  dangerous-ops.md  deny-paths.txt
lilith/: architecture.md  benchmark-results.latest.json  benchmark-suite.yaml  benchmark-task-pack.yaml  comparison-matrix.latest.json  identity.md  memory-schema.yaml  permission-policy.yaml  profile-schema.yaml  runtime-map.yaml
output-styles/: README.md  aemeath-meta-butler.md  roxy-migurdia.md
proposals/: soul-neutralization-design.md  v35-deep-collab-design.md
scripts/: audit_skills.py  fix-emoji-backtick.py  grok_search_chat_compat.mjs  grok_search_chat_compat_core.mjs  inject-cursor-user-rules.py  merge_codex_config.py  sync-codex-runtime.ps1  sync-cursor-rules.ps1  sync-cursor-rules.py  sync-cursor-skills.ps1  sync-runtime.ps1  test_grok_search_chat_compat.mjs  test_merge_codex_config.py  test_sync_codex_runtime.ps1
soul/: CLAUDE.md
statusline/: 514cc.toml  README.md
(+150 files in other folders)
