[package]
name = "cc-desktop"
version = "0.1.0"
description = "514cc Console desktop shell (Tauri 2) — auto-starts the control-center kernel and opens it in a native window"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
